...
                                    </fragment>
                                </attributedString>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bAG-AD-jBv">
                                <rect key="frame" x="177.5" y="138.5" width="60" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="NextCar"/>
                                <state key="normal" title="Next Car">
                                    <color key="titleColor" red="0.72559099739999999" green="0.13092156360000001" blue="0.021178001669999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
                                <connections>
                                    <action selector="NextCar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PzR-7e-Y78"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="652-Nd-voe">
                                <rect key="frame" x="340" y="178.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="ExhaustSwitch"/>
                                <connections>
                                    <action selector="EngineExhaustPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="2AW-C5-KTo"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="d4T-qB-ktO">
                                <rect key="frame" x="340" y="229.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="TiresSwitch"/>
                                <connections>
                                    <action selector="TiresPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="b6o-9S-MTE"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exhaust Package (Cost: 250)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYF-Pg-q8w">
                                <rect key="frame" x="15" y="183.5" width="222" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Zn2-MZ-PXJ">
                                <rect key="frame" x="340" y="280.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="NitroSwitch"/>
                                <connections>
                                    <action selector="NitroPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="DHL-Fs-zNP"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zWC-vS-FVk">
                                <rect key="frame" x="340" y="331.5" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="ECUSwitch"/>
                                <connections>
                                    <action selector="ECUPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="alX-Lb-vZ3"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXG-dE-yOJ">
                                <rect key="frame" x="272" y="54" width="122" height="21"/>
...
